--- a/Example.ipynb
+++ b/Example.ipynb
@@ -28,7 +28,7 @@
     "    \\end{array}\n",
     "\\right.\n",
     "$$\n",
-    "![Lorenz63](Images\\Lorenz63.png)"
+    "![Lorenz63](Images/Lorenz63.png)"
    ]
   },
   {
@@ -265,7 +265,7 @@
     "$$\n",
     "u_{i}^{(n+1)} = F(\\mathbf{u}^{(n)}) = f(u_{i}^{(n)}) + \\frac{\\varepsilon}{2} \\bigl( f(u_{i+1}^{(n)}) - 2f(u_{i}^{(n)}) + f(u_{i-1}^{(n)}) \\bigr)\n",
     "$$\n",
-    "![CML](Images\\CML.png)"
+    "![CML](Images/CML.png)"
    ]
   },
   {
