--- a/Example.ipynb
+++ b/Example.ipynb
@@ -29,7 +29,7 @@
     "\\right.\n",
     "$$\n",
     "\n",
-    "![Lorenz63](images/Lorenz63.png)"
+    "![Lorenz63](images/Lorenz63.PNG)"
    ]
   },
   {
@@ -267,7 +267,7 @@
     "u_{i}^{(n+1)} = F(\\mathbf{u}^{(n)}) = f(u_{i}^{(n)}) + \\frac{\\varepsilon}{2} \\bigl( f(u_{i+1}^{(n)}) - 2f(u_{i}^{(n)}) + f(u_{i-1}^{(n)}) \\bigr)\n",
     "$$\n",
     "\n",
-    "![CML](images/CML.png)"
+    "![CML](images/CML.PNG)"
    ]
   },
   {
