--- a/Example.ipynb
+++ b/Example.ipynb
@@ -29,7 +29,7 @@
     "\\right.\n",
     "$$\n",
     "\n",
-    "![Lorenz63](images/Lorenz63.PNG)"
+    "![](images/Lorenz63.PNG)"
    ]
   },
   {
