Center Lorenz image

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -29,7 +29,9 @@
     "\\right.\n",
     "$$\n",
     "\n",
-    "![Lorenz](images/Lorenz63.png)"
+    "<div style=\"display: flex; justify-content: center;\">\n",
+    "    <img src=\"images/Lorenz63.png\" alt=\"Lorenz\" />\n",
+    "</div>"
    ]
   },
   {
