Center Lorenz image

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -269,7 +269,9 @@
     "u_{i}^{(n+1)} = F(\\mathbf{u}^{(n)}) = f(u_{i}^{(n)}) + \\frac{\\varepsilon}{2} \\bigl( f(u_{i+1}^{(n)}) - 2f(u_{i}^{(n)}) + f(u_{i-1}^{(n)}) \\bigr)\n",
     "$$\n",
     "\n",
-    "![CML](images/CML.png)"
+    "<div style=\"display: flex; justify-content: center;\">\n",
+    "    <img src=\"images/CML.png\" alt=\"CML\" />\n",
+    "</div>"
    ]
   },
   {
